--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,5 +1,7 @@
+v1.1.2
+-- Added bare support
 v1.1.1
--- Added Bare support
+-- Small fix
 v1.1.0
 -- Start maintaining changelog
 -- Added the "secure" functionality
